<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Forrest</string>
    <string name="facebook_app_id">262974808873729</string>
    <string name="fb_login_protocol_scheme">fb262974808873729</string>

    <string name="welcome">"Welcome !"</string>

    <!-- Login -->
    <string name="man_running_image_desc">Man running image</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="sign_in_facebook">Sign in with\nfacebook</string>
    <string name="sign_in_facebook_des">Sign in with facebook</string>

    <!-- Welcome Toolbar -->
    <string name="welcome_toolbar_subtitle">Set up your account</string>

    <!-- Welcome Calories -->
    <string name="welcome_title">Welcome %1$s! \n</string>
    <string name="welcome_subtitle">Set up your account</string>
    <string name="calories_info">This information will let us \ncalculate <b>calories</b> burnt
    </string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="next">Next</string>
    <string name="required_calories_field_empty">You are missing at least a required field
        to calculate calories burnt</string>

    <!-- Picker fragment -->
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="centimeters">cm</string>
    <string name="kilograms">kg</string>
    <string name="kilometers">km</string>
    <string name="hours">h</string>
    <string name="minutes">min</string>
    <string name="float_point">.</string>

    <!-- Welcome location permission -->
    <string name="location_info">GPS will let you see your \nroute with better accuracy</string>
    <string name="my_location_icon_desc">Location icon</string>
    <string name="location_enabled_icon_desc">Location enabled icon</string>
    <string name="gps_location">GPS Location</string>
    <string name="permission_denied_explanation">Tracking running routine will require location
        permission.</string>
    <string name="settings">Settings</string>

    <!-- Welcome Goal -->
    <string name="goal_info">Setup your goal</string>
    <string name="frequency">Frequency</string>
    <string name="select_units">by</string>
    <string name="set_goal">Set Goal</string>
    <string name="calories_meal_equivalent_img">Calories meal equivalent image</string>
    <string name="select">Select</string>
    <string name="set_distance">Set Distance</string>
    <string name="set_duration">Set Duration</string>
    <string name="ready">Ready</string>
    <string name="welcome_burning_calories">You will be burning <em>%1$.2f</em> calories.</string>
    <string name="meal_equivalent_text">Equivalent to &lt;b>&lt;i>%1$s&lt;/i>&lt;/b></string>
    <string name="required_goal_field_empty">You are missing a required field to set up your
        goal</string>

    <string-array name="frequency_array">
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>

    <string-array name="units_array">
        <item>Distance</item>
        <item>Time</item>
    </string-array>

    <!-- Home Run -->
    <string name="home_label">Forrest</string>
    <string name="menu_item_logout">Logout</string>
    <string name="progress_nav_label">Progress</string>
    <string name="run_nav_label">Run</string>
    <string name="run_forrest_fab">Run Forrest!</string>
    <string name="run_extended_fab_desc">Run button</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="time_running_placeholder">00:00:00</string>
    <string name="time_running_label">h:m:s</string>
    <string name="distance_placeholder">0:00</string>
    <string name="rhythm_placeholder">00:00</string>
    <string name="calories_placeholder">0.00</string>

    <!-- Ongoing -->
    <string name="pause_extended_fab">Pause</string>
    <string name="pause_extended_fab_desc">Pause button</string>
    <string name="stop_fab_desc">Stop button</string>
    <string name="play_fab_desc">Stop button</string>
    <string name="time_label">hh:mm:ss</string>
    <string name="distancel_label">km</string>
    <string name="rhytm_label">min/km</string>
    <string name="calories_label">cal</string>
    <string name="elapsed_time_short_format_h_mm_ss"><xliff:g example="1" id="hours">%1$d</xliff:g>:<xliff:g example="43" id="minutes">%2$02d</xliff:g>:<xliff:g example="33" id="seconds">%3$02d</xliff:g></string>
    <string name="is_running_over"><b>RUNNING OVER?</b></string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <!-- Home Progress -->
    <string name="running_report">Running Report</string>
    <string name="meal_equivalent_image_desc">Meal equivalent image</string>
    <string name="go_home">Go Home</string>
    <string name="go_home_desc">Go home button</string>
    <string name="icon_man_running">Icon man running</string>
    <string name="calories_burnt">Calories burnt</string>
    <string name="average_rhythm">Average rhythm</string>
    <string name="my_route">My route</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="recent_activities">Recent Activities</string>

    <!-- Widget -->
    <string name="last_running_session"><b>LAST SESSION</b></string>
    <string name="time">Time</string>
    <string name="add_widget">Add widget</string>
    <string name="rhythm">Rhythm</string>

</resources>