<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.example.android.forrest.ui.report.ReportViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.report.ReportFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/running_report" />
        </com.google.android.material.appbar.AppBarLayout>


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/meal_equivalent_image_desc"
            android:src="@drawable/ic_launcher_foreground"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
            app:layout_constraintVertical_bias="0.08" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            tools:text="9 pizzas burnt in calories" />

        <TextView
            android:id="@+id/duration_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/duration"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/duration_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:duration="@{viewmodel.exercise.duration}"
            app:layout_constraintBottom_toBottomOf="@+id/duration_label"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintTop_toTopOf="@+id/duration_label"
            tools:text="1h 15min 44sec" />

        <TextView
            android:id="@+id/distance_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/distance"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/duration_label" />

        <TextView
            android:id="@+id/distance_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:distance="@{viewmodel.exercise.distance}"
            app:layout_constraintBottom_toBottomOf="@+id/distance_label"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintTop_toTopOf="@+id/distance_label"
            tools:text="5 km" />

        <TextView
            android:id="@+id/calories_burnt_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/calories_burnt"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/distance_label" />

        <TextView
            android:id="@+id/calories_burnt_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:calories="@{viewmodel.exercise.caloriesBurnt}"
            app:layout_constraintBottom_toBottomOf="@+id/calories_burnt_label"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintTop_toTopOf="@+id/calories_burnt_label"
            tools:text="400 kCal" />

<!--        <TextView-->
<!--            android:id="@+id/avg_rhytm_label"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:text="@string/average_rhythm"-->
<!--            app:layout_constraintStart_toStartOf="@+id/guideline_start"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/calories_burnt_label" />-->

<!--        <TextView-->
<!--            android:id="@+id/avg_rhytm_value"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textStyle="bold"-->
<!--            app:rhythm="@{viewmodel.exercise.}"-->
<!--            app:layout_constraintBottom_toBottomOf="@+id/avg_rhytm_label"-->
<!--            app:layout_constraintEnd_toStartOf="@+id/guideline_end"-->
<!--            app:layout_constraintTop_toTopOf="@+id/avg_rhytm_label"-->
<!--            tools:text="10 min/km" />-->

        <TextView
            android:id="@+id/route_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/my_route"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/avg_rhytm_label" />

        <ImageView
            android:id="@+id/route_map"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/route_header"
            tools:src="@tools:sample/backgrounds/scenic" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/pause_fab"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/go_home_desc"
            android:gravity="center"
            android:text="@string/go_home"
            android:onClick="@{() -> viewmodel.goHome()}"
            app:backgroundTint="?attr/colorSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintTop_toBottomOf="@id/route_map"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="RtlSymmetry" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>