<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:theme="@style/Theme.Forrest.Welcome">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                app:title="@string/home_label"
                app:titleTextColor="?attr/colorOnBackground" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/time_running_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00:00:00"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="40sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/time_info_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="h:m:s"
                    android:textColor="?attr/colorOnBackground"
                    app:layout_constraintEnd_toEndOf="@id/time_running_text"
                    app:layout_constraintStart_toStartOf="@id/time_running_text"
                    app:layout_constraintTop_toBottomOf="@id/time_running_text" />

                <TextView
                    android:id="@+id/km_running_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:text="0:00"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="@id/guideline4"
                    app:layout_constraintTop_toBottomOf="@+id/time_info_label" />

                <TextView
                    android:id="@+id/rhytm_running_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00:00"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/km_running_text"
                    app:layout_constraintEnd_toStartOf="@+id/guideline5"
                    app:layout_constraintStart_toStartOf="@+id/guideline4"
                    app:layout_constraintTop_toTopOf="@+id/km_running_text" />

                <TextView
                    android:id="@+id/calories_running_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/rhytm_running_text"
                    app:layout_constraintEnd_toEndOf="@id/guideline5"
                    app:layout_constraintTop_toTopOf="@+id/rhytm_running_text" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.12" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.88" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar_layout" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/pause_fab"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/pause_extended_fab_desc"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="@string/pause_extended_fab"
            app:backgroundTint="?attr/colorSecondary"
            app:icon="@drawable/ic_pause"
            app:iconTint="?attr/colorOnSecondary"
            app:layout_constraintBottom_toBottomOf="@id/map"
            app:layout_constraintEnd_toEndOf="@id/map"
            app:layout_constraintStart_toStartOf="@id/map"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/stop_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            android:layout_marginEnd="8dp"
            app:backgroundTint="@color/red_cta"
            android:visibility="invisible"
            android:contentDescription="@string/stop_fab_desc"
            app:layout_constraintBottom_toBottomOf="@id/pause_fab"
            app:layout_constraintEnd_toStartOf="@id/play_fab"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toTopOf="@id/pause_fab"
            app:layout_constraintStart_toStartOf="@id/pause_fab"
            app:srcCompat="@drawable/ic_stop" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/play_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            android:visibility="invisible"
            android:contentDescription="@string/play_fab_desc"
            app:layout_constraintBottom_toBottomOf="@id/stop_fab"
            app:layout_constraintEnd_toEndOf="@+id/pause_fab"
            app:layout_constraintStart_toEndOf="@id/stop_fab"
            app:layout_constraintTop_toTopOf="@id/stop_fab"
            app:backgroundTint="@color/green_cta"
            app:srcCompat="@drawable/ic_play"
            app:tint="?attr/colorOnBackground" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>